# US-Weather-Energy-Analysis-Pipeline

./: .gitignore  AI_USAGE.md  README.md  main.py  pyproject.toml
.streamlit/: config.toml  secrets.example.toml
config/: config.example.yaml  config.yaml
dashboards/: api_debugger.py  app.py  date_fix.py  debug_helper.py
data/processed/: data.txt  weather_data.csv  weather_energy_data.csv
data/raw/: .gitkeep  energy_Chicago_2025-06-16_2025-09-14.json  energy_Houston_2025-06-16_2025-09-14.json  energy_New York_2025-06-16_2025-09-14.json  energy_Phoenix_2025-06-16_2025-09-14.json  energy_Seattle_2025-06-16_2025-09-14.json  weather_Chicago_2025-04-03_2025-09-29.json  weather_Chicago_2025-04-07_2025-10-03.json  weather_Chicago_2025-04-08_2025-10-04.json  weather_Chicago_2025-06-16_2025-09-14.json  weather_Houston_2025-04-03_2025-09-29.json  weather_Houston_2025-04-07_2025-10-03.json  weather_Houston_2025-04-08_2025-10-04.json  weather_Houston_2025-06-16_2025-09-14.json  weather_New York_2025-04-03_2025-09-29.json  weather_New York_2025-04-07_2025-10-03.json  weather_New York_2025-04-08_2025-10-04.json  weather_New York_2025-06-16_2025-09-14.json  weather_Phoenix_2025-04-03_2025-09-29.json  weather_Phoenix_2025-04-07_2025-10-03.json  weather_Phoenix_2025-04-08_2025-10-04.json  weather_Phoenix_2025-06-16_2025-09-14.json  weather_Seattle_2025-04-03_2025-09-29.json  weather_Seattle_2025-04-07_2025-10-03.json  (+2 more)
notebooks/: exploration.ipynb
src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py
tests/: test_pipeline.py
video_link.md/: video_link.txt
