# Dependencies(Using uv)
[project]
name = "weather-energy-pipeline"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas",
    "pyyaml",
    "streamlit",
    "plotly>=5.13.0",
    "pydeck>=0.9.1",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "seaborn",
    "pytest",
    "statsmodels",
    "python-dateutil"
]

# --- Tell Poetry not to attempt to install the current project package ---
[tool.poetry]
package-mode = false